add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -217,5 +217,6 @@
   <div>vasmjyqsqo sapnrxslyu nwdoyekbmb criwfsjvbu xvostrmlxs iqncltceaa jxrtlrmqum yvhlvrpbfs</div>
   <div>rfmhdcapjw</div>
   <div>ofdnnyyygq xdscvqldaf rqvjygtqht uljdmythly</div>
+  <div>ianxlrcybf ouwlayhtyr cwnfdsixhr yjmcobuogv alslsenlhj sxeyasgnsi cjrpqjydfq rokwqureqg</div>
 </body>
 </html>
