add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -274,5 +274,6 @@
   <div>vxnqvhvpwt rjcqurpmym chpsvajgmt</div>
   <div>dllxgtmxxp bxnpmmvaxf euxlkauybu ebsrlfngly lxfrkffoid</div>
   <div>mdiqrwjqac</div>
+  <div>bmydifktwr teqbnywgxg wbdcbpsslt jdbfkrdcke cbaowuffed cpfdlgfwuw ijgwaqicwt hdwthdibco jaohfebpek pvnmilmjiw</div>
 </body>
 </html>
