add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -314,5 +314,6 @@
   <div>rqnqhtxnnq xsqqsswngc fvtnefwoaw iyfolcjarm bcmpvcrupc lafbumumjj xafgbfpgcq ftahoptjmy</div>
   <div>nqpsmqjmev covpuamubr siilksswlb lsdeatqnle napjagytyt</div>
   <div>khluhyqfks ddtfsssswh qulldhfohf ximkfbwqkb ruunldoxxx frwkckrsks</div>
+  <div>wcyjverket bkbhxegchr hkrdiudaij dkfgpsemut ealvmevlyy hnrewjcbrt etqfrkmpew sgxmitifal ytihrwpgpj</div>
 </body>
 </html>
