add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -292,5 +292,6 @@
   <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
   <div>gaajhpboao nkxlpyhxnf mjyrantfsa plotwijjpd yyfvkenpvj vbargtfrbn bqcsyndusp hngdhqutrv</div>
   <div>kmbpkegnps</div>
+  <div>bcfcnwndte ckfvuwhdrr</div>
 </body>
 </html>
