add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -253,5 +253,6 @@
   <div>hrpwkewlde qdetbpwesv</div>
   <div>ibfgpntrff byoiouwljs mhqqdnrscy dpixcfegnf dmxlagcdaw rjnhhvffei mkbevwdfog eqkjixjenl pcpgqkmegd</div>
   <div>dnfnhjwigx vnbkwcjpsy hnjbqtlydl hwwlxnboeq hevujelhjk qlbluogamk smiwdrfqle wmbtljsago mwebdspvlv</div>
+  <div>mllqsjfemv nebrurdqrr</div>
 </body>
 </html>
