add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -430,5 +430,6 @@
   <div>lbgyyvvciw lrruxqdlxw cstgovyndq ctpsuneayr</div>
   <div>ebwtybimwl hidlasgbbu jrkmvnlrla hxsqwujpfj ehtkuklrrb gwjytlpfqt</div>
   <div>uuqthbhnih</div>
+  <div>meekqyrbcq flimtsuspc</div>
 </body>
 </html>
