add code in files types: .json,.html,.js,.xml remove code in files types:

--- a/content.html
+++ b/content.html
@@ -235,5 +235,6 @@
   <div>rdyrhppnsq sqkvirwape tiooenqtkc qmheydvqny somdchleew xsbeunlsdi</div>
   <div>qofvpbhyni ntkxbybmlo cggkrtljim nfcbnjhbae ngmxkmsnmw ggvowokfiv xbvhgnhdok rxdlvtubqk nrfjhwwnsj</div>
   <div>fxxjdkbaup eisnftaebk pikblunmwq</div>
+  <div>olkbxkembs</div>
 </body>
 </html>
