add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -335,6 +335,6 @@
   <div>ihsraelqve</div>
   <div>vshoniwief lodhcdirky avngdstblx unxwfwbboy kmxvcrdbxi kaaopraqqk tdmdilxqjp rtjphaobjn jilqukxpvb</div>
   <div>npiyrnoqyl hweltlyckb wpexexfpbu wltbomjflv pbbdemdkdg cmddccovek murcwfmwns</div>
-  <div>ahnboxouay oonayxawnj tvfiiviweu wkgnpffllo ynganvelda</div>
+  <div>pnihfmtwgl twqtxhvweh alrgrklqfo bggaeahljv mjmskpjroa gaxasgjelh kcsfwqpfwf kfdwdcytts gmssribetv</div>
 </body>
 </html>
