add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -457,6 +457,6 @@
   <div>xlwxosfhow pksanjtqxo yygphxuyae spcstxbjip nlrkfncjds</div>
   <div>hncstdgjrf abtrkulmfj uegmxwwpva hxvjsyophr hsrbmqhpsb rrfihmkntb umsfgnjlrn vnpplqccbc</div>
   <div>uywajwbvpe dhfbeegfpm</div>
-  <div>xecfbwitcn</div>
+  <div>iuipfpryyp fvormusgsp besrhnrosc joxunmsslr lsipmphydr</div>
 </body>
 </html>
