add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -292,6 +292,6 @@
   <div>vbbcbiepaj phajbovdbs trouypigeh urojosepxn</div>
   <div>gaajhpboao nkxlpyhxnf mjyrantfsa plotwijjpd yyfvkenpvj vbargtfrbn bqcsyndusp hngdhqutrv</div>
   <div>kmbpkegnps</div>
-  <div>bcfcnwndte ckfvuwhdrr</div>
+  <div>hearersqxi hnggkotaas eqriiealxa fdyucnvspf fkubalpegi dhvmltouae pqiuxxcbmn otqiqbqtim jyelbgmwtb scmtfakycc</div>
 </body>
 </html>
