add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -508,6 +508,6 @@
   <div>vhehbmhlru mjrjcixeek lpelvkvega</div>
   <div>nxgkuynyds xlwqawhdvy</div>
   <div>vciavniion fbpfdfkurw nfjnutbheg deigrnqcpx</div>
-  <div>cdudurdivx iqcluuwjue chkrvmryro wsgvjelhue uouspnpbmw qsnwcniplq</div>
+  <div>xscqhvwoin ysmifekpfc sravannymj gakbqsncjv mwyuslorvr eddhngohql ywokinoavv cfrabswgfn ffbrpqspkl</div>
 </body>
 </html>
