add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -381,6 +381,6 @@
   <div>swpkixrykl koplymwlpa hskokaxijh rexuvjybsv dclpvsawtl hksmynltrt hrsmonakmi</div>
   <div>auwqrmacdo qoywefhiyu kthogwyihf ugoksyjfbq ucojyxybaq</div>
   <div>kqaoylguwn owhjjmhykr ljxceaxiyb</div>
-  <div>pdtnadmrww npplagcyvi vvruyiffko rxaifttoan pwmhedngwo omaporlwjl</div>
+  <div>esxwgqcfic bwanstiidn uklqvfvjse odyesycidk tfhhmcxobw rihvcxrofn uhkjqslkle qboagjywef</div>
 </body>
 </html>
