add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -405,6 +405,6 @@
   <div>mbvkjldvqo fxsjaeiofs hdcyvweomw dxptkxprmn</div>
   <div>vvorqucbjp orxmlbcwwc iwbgmhxbfv huyvtgwmxt</div>
   <div>aogejikmfy wmmledvlsi ybaohajyag jepiburkmg iktfxbutbs</div>
-  <div>qgtbnotttg kmgfwqhuug ggqrrdnbya rbsoixcfgt plaeyknkhe weslbrdegy maftipxhop ulqtgjaihm</div>
+  <div>qigjabeylh fyioiwrklk twlhotjhvc skecmtkcxg lrwukicwqe vocapqrfmx epsmjartrm</div>
 </body>
 </html>
