add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -359,6 +359,6 @@
   <div>rftfqlyaew cgxuvdbshe ytqbdohdbp bicnoowuue ajydcqgjdd hjijrfkmje kahveyigeh cmcjakywxo vimsiiishw jnlxeplhxi</div>
   <div>ksgyqvxmno kkdrfvnhyl ymajppltdx xdgcbomxnq ifobolykws ovdqxrjryq dlliwjibpg aiqryduunj ycluuwtfev rtrsfwxlxw</div>
   <div>qkeiobtqyr pjwkxydofy ogqjkqoquh xnlgcuqkjv</div>
-  <div>qgpqglijbu</div>
+  <div>deyqwylfva gcymejpvkd uacfnistyg jefhnovyeq nyxtwujqxi</div>
 </body>
 </html>
