add code in files types: .html,.js,.xml remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -484,6 +484,6 @@
   <div>csgnxnuksq lrolylvvnw ndqblbrxnu rtjahrwtmx ullhwdfmqo qtyjfcqjlr yxigloajef</div>
   <div>ohywkjwtdu jlogspvprw</div>
   <div>bnsxvhhprk agfwvfogli rvqhbfmolr xvtjdcwleo awvjwlhtah clxhwessjh sbqroryqdg gvofvhjfld jrkdcsprcf kloseagrmn</div>
-  <div>rtpfdngeko oamttqkgak</div>
+  <div>imyocykbqk iedeawflqx upxxwpesyh</div>
 </body>
 </html>
