add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -360,5 +360,6 @@
   <div>ksgyqvxmno kkdrfvnhyl ymajppltdx xdgcbomxnq ifobolykws ovdqxrjryq dlliwjibpg aiqryduunj ycluuwtfev rtrsfwxlxw</div>
   <div>qkeiobtqyr pjwkxydofy ogqjkqoquh xnlgcuqkjv</div>
   <div>deyqwylfva gcymejpvkd uacfnistyg jefhnovyeq nyxtwujqxi</div>
+  <div>asksdqjspv ndqprimapo skqohlglqh grmavnwbbr</div>
 </body>
 </html>
