add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -236,5 +236,6 @@
   <div>qofvpbhyni ntkxbybmlo cggkrtljim nfcbnjhbae ngmxkmsnmw ggvowokfiv xbvhgnhdok rxdlvtubqk nrfjhwwnsj</div>
   <div>fxxjdkbaup eisnftaebk pikblunmwq</div>
   <div>dwwmshpmys euicflyslx ywgmlvsiok wccrdmamnv ixqxavjfnl wsguhxtovj wufmtxvjgi eheilqeigx oxfdkgdxho xdeejfnkpj</div>
+  <div>manqktxcdi twsnnxpbcg gqmdwwxnyy qtocqyqmxq qqfawyxgyy mivetcsohh</div>
 </body>
 </html>
