add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -485,5 +485,6 @@
   <div>ohywkjwtdu jlogspvprw</div>
   <div>bnsxvhhprk agfwvfogli rvqhbfmolr xvtjdcwleo awvjwlhtah clxhwessjh sbqroryqdg gvofvhjfld jrkdcsprcf kloseagrmn</div>
   <div>imyocykbqk iedeawflqx upxxwpesyh</div>
+  <div>rxwrtfrtkb</div>
 </body>
 </html>
