add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -218,5 +218,6 @@
   <div>rfmhdcapjw</div>
   <div>ofdnnyyygq xdscvqldaf rqvjygtqht uljdmythly</div>
   <div>kfasjfdbpr syjxatqugo qmtvpdbeyu hekcxsqglg mwqbxxvxfx hnrlocpjfu sxqnaqcbrp dvcbkdtgoc nycscbonpv ekcsmpbryn</div>
+  <div>scunxmolow xrhnymbdlo yvlqlrqmxp miahsluyir wqcqfuccrq</div>
 </body>
 </html>
