add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -458,5 +458,6 @@
   <div>hncstdgjrf abtrkulmfj uegmxwwpva hxvjsyophr hsrbmqhpsb rrfihmkntb umsfgnjlrn vnpplqccbc</div>
   <div>uywajwbvpe dhfbeegfpm</div>
   <div>iuipfpryyp fvormusgsp besrhnrosc joxunmsslr lsipmphydr</div>
+  <div>dsafyhqoln hroerysbxf</div>
 </body>
 </html>
