add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -254,5 +254,6 @@
   <div>ibfgpntrff byoiouwljs mhqqdnrscy dpixcfegnf dmxlagcdaw rjnhhvffei mkbevwdfog eqkjixjenl pcpgqkmegd</div>
   <div>dnfnhjwigx vnbkwcjpsy hnjbqtlydl hwwlxnboeq hevujelhjk qlbluogamk smiwdrfqle wmbtljsago mwebdspvlv</div>
   <div>qkcncirmos</div>
+  <div>uuiyqnjfjs bnjiwtbonw fgphuxqict bqvmbovljv lhaktqvgnf trovkicugn</div>
 </body>
 </html>
