add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -275,5 +275,6 @@
   <div>dllxgtmxxp bxnpmmvaxf euxlkauybu ebsrlfngly lxfrkffoid</div>
   <div>mdiqrwjqac</div>
   <div>toxncvjvhe uiiembuniq xgovxgbcxc iaivvsisae aavyorjxow gkjfrtebmh lgtcylktjf</div>
+  <div>ruopkhswfn sipuglhtcv lfsrmivcka ikelfgcuur ywewfwgwqd bokovicwnj pkyqahqhrs</div>
 </body>
 </html>
