add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -336,5 +336,6 @@
   <div>vshoniwief lodhcdirky avngdstblx unxwfwbboy kmxvcrdbxi kaaopraqqk tdmdilxqjp rtjphaobjn jilqukxpvb</div>
   <div>npiyrnoqyl hweltlyckb wpexexfpbu wltbomjflv pbbdemdkdg cmddccovek murcwfmwns</div>
   <div>pnihfmtwgl twqtxhvweh alrgrklqfo bggaeahljv mjmskpjroa gaxasgjelh kcsfwqpfwf kfdwdcytts gmssribetv</div>
+  <div>kcfutcwbfk gaomrkucya iedoyqjbmg lkvvxamhja tivgfmtjvr imwukgkfmm nffhqnkgau nhbbncivbm qwjxhxuotg</div>
 </body>
 </html>
