add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -382,5 +382,6 @@
   <div>auwqrmacdo qoywefhiyu kthogwyihf ugoksyjfbq ucojyxybaq</div>
   <div>kqaoylguwn owhjjmhykr ljxceaxiyb</div>
   <div>esxwgqcfic bwanstiidn uklqvfvjse odyesycidk tfhhmcxobw rihvcxrofn uhkjqslkle qboagjywef</div>
+  <div>qmfsabqpin vfqbysrhtl agodgfnwuu ntahfwstnu</div>
 </body>
 </html>
