add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -293,5 +293,6 @@
   <div>gaajhpboao nkxlpyhxnf mjyrantfsa plotwijjpd yyfvkenpvj vbargtfrbn bqcsyndusp hngdhqutrv</div>
   <div>kmbpkegnps</div>
   <div>hearersqxi hnggkotaas eqriiealxa fdyucnvspf fkubalpegi dhvmltouae pqiuxxcbmn otqiqbqtim jyelbgmwtb scmtfakycc</div>
+  <div>fasfqfodwf</div>
 </body>
 </html>
