add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -432,5 +432,6 @@
   <div>uuqthbhnih</div>
   <div>wnxpfutwxw tlvxomvvgi fuodbxucwh stbnfbtcsr ruorwecvxk dnlefneiij mpsfnpfnpn hwoedmtlyv fgxdusgwow niwvfnkayp</div>
   <div>mtoeycnnnv</div>
+  <div>walyxjvjvf yvtltynojb</div>
 </body>
 </html>
