add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -276,5 +276,6 @@
   <div>mdiqrwjqac</div>
   <div>toxncvjvhe uiiembuniq xgovxgbcxc iaivvsisae aavyorjxow gkjfrtebmh lgtcylktjf</div>
   <div>ruopkhswfn sipuglhtcv lfsrmivcka ikelfgcuur ywewfwgwqd bokovicwnj pkyqahqhrs</div>
+  <div>gunqdkponm kbfggxeorq</div>
 </body>
 </html>
