add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -316,5 +316,6 @@
   <div>khluhyqfks ddtfsssswh qulldhfohf ximkfbwqkb ruunldoxxx frwkckrsks</div>
   <div>npxlopxlss obbscetavp iejcrdvqha mgskobbjnj xerjapmxia ptgnfpskoq txojkgchom eakqwmvicm lygogyfrqk</div>
   <div>ixghrsvynv mhrxypvctw yidrvqykub dnhigbjose</div>
+  <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
 </body>
 </html>
