add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -294,5 +294,6 @@
   <div>kmbpkegnps</div>
   <div>hearersqxi hnggkotaas eqriiealxa fdyucnvspf fkubalpegi dhvmltouae pqiuxxcbmn otqiqbqtim jyelbgmwtb scmtfakycc</div>
   <div>fasfqfodwf</div>
+  <div>pyuntpeurd yorfbclctm bbjbsliart owqninraxk okmkaiytyi ylikexwska ebamnhrkbj</div>
 </body>
 </html>
