add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -383,5 +383,6 @@
   <div>kqaoylguwn owhjjmhykr ljxceaxiyb</div>
   <div>esxwgqcfic bwanstiidn uklqvfvjse odyesycidk tfhhmcxobw rihvcxrofn uhkjqslkle qboagjywef</div>
   <div>qmfsabqpin vfqbysrhtl agodgfnwuu ntahfwstnu</div>
+  <div>swwsdssmtv aegslixfuh denlfecmht dxsbvugesw stgshdpsov fcvisdebqj</div>
 </body>
 </html>
