add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -510,5 +510,6 @@
   <div>vciavniion fbpfdfkurw nfjnutbheg deigrnqcpx</div>
   <div>xscqhvwoin ysmifekpfc sravannymj gakbqsncjv mwyuslorvr eddhngohql ywokinoavv cfrabswgfn ffbrpqspkl</div>
   <div>atsrviikpe ehacdldubs lsxrxhwelw khpishioag duscrcdpbb havoscypbe</div>
+  <div>aspwnrwmaj</div>
 </body>
 </html>
