add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -255,5 +255,6 @@
   <div>dnfnhjwigx vnbkwcjpsy hnjbqtlydl hwwlxnboeq hevujelhjk qlbluogamk smiwdrfqle wmbtljsago mwebdspvlv</div>
   <div>qkcncirmos</div>
   <div>uuiyqnjfjs bnjiwtbonw fgphuxqict bqvmbovljv lhaktqvgnf trovkicugn</div>
+  <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
 </body>
 </html>
