add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -486,5 +486,6 @@
   <div>bnsxvhhprk agfwvfogli rvqhbfmolr xvtjdcwleo awvjwlhtah clxhwessjh sbqroryqdg gvofvhjfld jrkdcsprcf kloseagrmn</div>
   <div>imyocykbqk iedeawflqx upxxwpesyh</div>
   <div>rxwrtfrtkb</div>
+  <div>hqomjmodbn eeovpsuliy emdbfxbfor dftnacusqr</div>
 </body>
 </html>
