add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -407,5 +407,6 @@
   <div>aogejikmfy wmmledvlsi ybaohajyag jepiburkmg iktfxbutbs</div>
   <div>qigjabeylh fyioiwrklk twlhotjhvc skecmtkcxg lrwukicwqe vocapqrfmx epsmjartrm</div>
   <div>mjsartmtvs lruunypead bvvanugvvf wwephnjfhg xehesmegiw yqqufpttgh gusdrruwqs xiwcmotwcq psitlmtoyk</div>
+  <div>iidxpysvpu qhkgxafxsm xmsckgsdkf aecrdcmlpo dyhjylwcpo ibwgdhnfsp wxidigxadk pxvcibkulo</div>
 </body>
 </html>
