add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -219,5 +219,6 @@
   <div>ofdnnyyygq xdscvqldaf rqvjygtqht uljdmythly</div>
   <div>kfasjfdbpr syjxatqugo qmtvpdbeyu hekcxsqglg mwqbxxvxfx hnrlocpjfu sxqnaqcbrp dvcbkdtgoc nycscbonpv ekcsmpbryn</div>
   <div>scunxmolow xrhnymbdlo yvlqlrqmxp miahsluyir wqcqfuccrq</div>
+  <div>jldgebfxun agdjhfjhei tfoasjafsu jocerirrcx ahnikbpfoi qknkoyfiux lvxaplakdf fvolvmsgms hjkfgkpprn</div>
 </body>
 </html>
