add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -361,5 +361,6 @@
   <div>qkeiobtqyr pjwkxydofy ogqjkqoquh xnlgcuqkjv</div>
   <div>deyqwylfva gcymejpvkd uacfnistyg jefhnovyeq nyxtwujqxi</div>
   <div>asksdqjspv ndqprimapo skqohlglqh grmavnwbbr</div>
+  <div>mlymenpgtk lhgrqjguvc fqedagidrw alxgwtxepm</div>
 </body>
 </html>
