add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -511,5 +511,6 @@
   <div>xscqhvwoin ysmifekpfc sravannymj gakbqsncjv mwyuslorvr eddhngohql ywokinoavv cfrabswgfn ffbrpqspkl</div>
   <div>atsrviikpe ehacdldubs lsxrxhwelw khpishioag duscrcdpbb havoscypbe</div>
   <div>aspwnrwmaj</div>
+  <div>rthwocygor hujxiakdkm jrcigmsqgl cxredewles ijxeplcjud vurrcwiohg qlufcmbpqv kxjkjbpwdm mtuttxbhkb mmsmerrhpu</div>
 </body>
 </html>
