add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -460,5 +460,6 @@
   <div>iuipfpryyp fvormusgsp besrhnrosc joxunmsslr lsipmphydr</div>
   <div>dsafyhqoln hroerysbxf</div>
   <div>jonrnfmqqt</div>
+  <div>pbcmqaybwm</div>
 </body>
 </html>
