add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -256,5 +256,6 @@
   <div>qkcncirmos</div>
   <div>uuiyqnjfjs bnjiwtbonw fgphuxqict bqvmbovljv lhaktqvgnf trovkicugn</div>
   <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
+  <div>fqjqbxbxyq foafvgxopw ohokchcjna oglvpmpmng ymsswofkwg qthqciewpg hhoygegjwm</div>
 </body>
 </html>
