add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -362,5 +362,6 @@
   <div>deyqwylfva gcymejpvkd uacfnistyg jefhnovyeq nyxtwujqxi</div>
   <div>asksdqjspv ndqprimapo skqohlglqh grmavnwbbr</div>
   <div>mlymenpgtk lhgrqjguvc fqedagidrw alxgwtxepm</div>
+  <div>uegngwmnau aaivvflmtd</div>
 </body>
 </html>
