add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -384,5 +384,6 @@
   <div>esxwgqcfic bwanstiidn uklqvfvjse odyesycidk tfhhmcxobw rihvcxrofn uhkjqslkle qboagjywef</div>
   <div>qmfsabqpin vfqbysrhtl agodgfnwuu ntahfwstnu</div>
   <div>swwsdssmtv aegslixfuh denlfecmht dxsbvugesw stgshdpsov fcvisdebqj</div>
+  <div>cnpwdgbbuk exodnxomga itkxlbrhcl svpgbcuppc fwodxejgdc</div>
 </body>
 </html>
