add code in files types: .html,.js remove code in files types: .js

--- a/content.html
+++ b/content.html
@@ -487,5 +487,6 @@
   <div>imyocykbqk iedeawflqx upxxwpesyh</div>
   <div>rxwrtfrtkb</div>
   <div>hqomjmodbn eeovpsuliy emdbfxbfor dftnacusqr</div>
+  <div>hoqjljpuhe hjdlkkbyof obkkeylsbn tmtkrwvcec ynkylyvjsa</div>
 </body>
 </html>
