add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -317,6 +317,6 @@
   <div>npxlopxlss obbscetavp iejcrdvqha mgskobbjnj xerjapmxia ptgnfpskoq txojkgchom eakqwmvicm lygogyfrqk</div>
   <div>ixghrsvynv mhrxypvctw yidrvqykub dnhigbjose</div>
   <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
-  <div>ptfkiuygqa vloqieaqor gifmqjxvbu qhlibtwlee inhfhkltns lpuwihrhjv aqgmbswlem hgupwpmhbu dlqemmgcmo</div>
+  <div>ymxskfyqsq cmphfddlfg igwqwpojdq xwuwtmiwdg qckllhesax tlssccbjhg kmqwaxiwgk fhubykgtmf</div>
 </body>
 </html>
