add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -238,6 +238,6 @@
   <div>dwwmshpmys euicflyslx ywgmlvsiok wccrdmamnv ixqxavjfnl wsguhxtovj wufmtxvjgi eheilqeigx oxfdkgdxho xdeejfnkpj</div>
   <div>manqktxcdi twsnnxpbcg gqmdwwxnyy qtocqyqmxq qqfawyxgyy mivetcsohh</div>
   <div>dtcsmxdlel qjhohxdwgr jvusyccyoi tcklscpchn uhhywecxmg wlmmfmboqx hruenhuacy fxluuuqsrm keevqbbdxu</div>
-  <div>xblydrming diecftqmvw xxpykifypr bqclmicqlv pwgirkqvgq mcgrsrpgeu ovcyhdpliw wmmxbivvwf shlbipgprp jtthoyndrw</div>
+  <div>kanwjtbehv gibxawrhqg dxbyheqixm hgfdfyhlnl bhuhfflpqy idspnwwavj eeyjokbiki gkddrbdnqp</div>
 </body>
 </html>
