add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -460,6 +460,6 @@
   <div>iuipfpryyp fvormusgsp besrhnrosc joxunmsslr lsipmphydr</div>
   <div>dsafyhqoln hroerysbxf</div>
   <div>jonrnfmqqt</div>
-  <div>pbcmqaybwm</div>
+  <div>ecedflrbgj ssdypwyrib jegmhyrybu oepuxnrgvm manftcibhf tnlnwlmkbo</div>
 </body>
 </html>
