add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -338,6 +338,6 @@
   <div>pnihfmtwgl twqtxhvweh alrgrklqfo bggaeahljv mjmskpjroa gaxasgjelh kcsfwqpfwf kfdwdcytts gmssribetv</div>
   <div>kcfutcwbfk gaomrkucya iedoyqjbmg lkvvxamhja tivgfmtjvr imwukgkfmm nffhqnkgau nhbbncivbm qwjxhxuotg</div>
   <div>hxyroperwf rrnkywmjre</div>
-  <div>guvmyiamjw bgvscgvwcd cybmyxtccy fbguwhmfqj iehkmdcloj agpekmcqun lyfrcoucji pahpwtxrsp</div>
+  <div>gaockjsmqk dhijrxylhq rrlthbpgej</div>
 </body>
 </html>
