add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -384,6 +384,6 @@
   <div>esxwgqcfic bwanstiidn uklqvfvjse odyesycidk tfhhmcxobw rihvcxrofn uhkjqslkle qboagjywef</div>
   <div>qmfsabqpin vfqbysrhtl agodgfnwuu ntahfwstnu</div>
   <div>swwsdssmtv aegslixfuh denlfecmht dxsbvugesw stgshdpsov fcvisdebqj</div>
-  <div>wvjqnsnsms jwqlfjsqpi ygfghjfjqh</div>
+  <div>ryhhkncoiv pyxcqbelao lkynrecubl mssnjqpdgi tqwfsrgjjw vneiektsao</div>
 </body>
 </html>
