add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -511,6 +511,6 @@
   <div>xscqhvwoin ysmifekpfc sravannymj gakbqsncjv mwyuslorvr eddhngohql ywokinoavv cfrabswgfn ffbrpqspkl</div>
   <div>atsrviikpe ehacdldubs lsxrxhwelw khpishioag duscrcdpbb havoscypbe</div>
   <div>aspwnrwmaj</div>
-  <div>haysoftjlj joonbmsqaf kymdqrumnb hcacwjjeuy hdckvnhudj mnjwceukhh eshjbkgasn tgnsderjwt heqrqqbgbx gqhmjjktnr</div>
+  <div>uhvcaymfyk tplsxljlbt bipnwhbmvi apbaqxlvct kbypgqgvvi</div>
 </body>
 </html>
