add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -256,6 +256,6 @@
   <div>qkcncirmos</div>
   <div>uuiyqnjfjs bnjiwtbonw fgphuxqict bqvmbovljv lhaktqvgnf trovkicugn</div>
   <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
-  <div>niujpunctw jfanaifuce qtlfddefad</div>
+  <div>qeeqicbvjy ldqupexrut fxhawqdvhc uybtfsmvla dpdlaukibd cdibxvhsmj</div>
 </body>
 </html>
