add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -408,6 +408,6 @@
   <div>qigjabeylh fyioiwrklk twlhotjhvc skecmtkcxg lrwukicwqe vocapqrfmx epsmjartrm</div>
   <div>mjsartmtvs lruunypead bvvanugvvf wwephnjfhg xehesmegiw yqqufpttgh gusdrruwqs xiwcmotwcq psitlmtoyk</div>
   <div>iidxpysvpu qhkgxafxsm xmsckgsdkf aecrdcmlpo dyhjylwcpo ibwgdhnfsp wxidigxadk pxvcibkulo</div>
-  <div>qixatbdtwm uvboxchxtb assmgpvqrv bwptuwtlpm tmjppcfepy</div>
+  <div>plwejyhgen cwhxofvlqp ovrsdpfcvw opxwcsdgir piqneywoaw mqrricnemt jhfhsphecq melalbdjui</div>
 </body>
 </html>
