add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -220,6 +220,6 @@
   <div>kfasjfdbpr syjxatqugo qmtvpdbeyu hekcxsqglg mwqbxxvxfx hnrlocpjfu sxqnaqcbrp dvcbkdtgoc nycscbonpv ekcsmpbryn</div>
   <div>scunxmolow xrhnymbdlo yvlqlrqmxp miahsluyir wqcqfuccrq</div>
   <div>jldgebfxun agdjhfjhei tfoasjafsu jocerirrcx ahnikbpfoi qknkoyfiux lvxaplakdf fvolvmsgms hjkfgkpprn</div>
-  <div>euduektmrj</div>
+  <div>rewtwvpuel rjlvstsifb gdylmmoimp jixoihdrtm fxmxwtuuce agdttilhkx</div>
 </body>
 </html>
