add code in files types: .js,.html,.xml remove code in files types: .js,.html,.xml

--- a/content.html
+++ b/content.html
@@ -277,6 +277,6 @@
   <div>toxncvjvhe uiiembuniq xgovxgbcxc iaivvsisae aavyorjxow gkjfrtebmh lgtcylktjf</div>
   <div>ruopkhswfn sipuglhtcv lfsrmivcka ikelfgcuur ywewfwgwqd bokovicwnj pkyqahqhrs</div>
   <div>gunqdkponm kbfggxeorq</div>
-  <div>cebaqpinaf lfyejerlka pqatpwdavw</div>
+  <div>hewwyldvwr</div>
 </body>
 </html>
