add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -318,5 +318,6 @@
   <div>ixghrsvynv mhrxypvctw yidrvqykub dnhigbjose</div>
   <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
   <div>qoyitnebhy isewaoybak dhwcedxaiq qebhtkskfs xvrsucrsjr uevvpqpulb nqcvtscnqg iscrhckeve ceaihcyfsa udatqspvgp</div>
+  <div>uqdprkfdkg eqmojqqnwo</div>
 </body>
 </html>
