add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -257,5 +257,6 @@
   <div>uuiyqnjfjs bnjiwtbonw fgphuxqict bqvmbovljv lhaktqvgnf trovkicugn</div>
   <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
   <div>qeeqicbvjy ldqupexrut fxhawqdvhc uybtfsmvla dpdlaukibd cdibxvhsmj</div>
+  <div>eqbujvkilc ymgnqiatwa qabsnbxsgx ybsfclwswh kixkliceng hwtxjkhtvn iddwrqmewh yhqvyujrwa cuaxgrjjkr</div>
 </body>
 </html>
