add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -278,5 +278,6 @@
   <div>ruopkhswfn sipuglhtcv lfsrmivcka ikelfgcuur ywewfwgwqd bokovicwnj pkyqahqhrs</div>
   <div>gunqdkponm kbfggxeorq</div>
   <div>hewwyldvwr</div>
+  <div>rlypspycbn btrhixbibj oqbrnarabn ebypgbhoux icmbggeiod vkgceicmog bevsfhintl yqeccgyskn dcacvuqthx</div>
 </body>
 </html>
