add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -385,5 +385,6 @@
   <div>qmfsabqpin vfqbysrhtl agodgfnwuu ntahfwstnu</div>
   <div>swwsdssmtv aegslixfuh denlfecmht dxsbvugesw stgshdpsov fcvisdebqj</div>
   <div>ryhhkncoiv pyxcqbelao lkynrecubl mssnjqpdgi tqwfsrgjjw vneiektsao</div>
+  <div>urpibrtrws idnurcxlyw lyqbbeompn mivbaejfea bfncmyngyn jtormykoff</div>
 </body>
 </html>
