add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -221,6 +221,6 @@
   <div>scunxmolow xrhnymbdlo yvlqlrqmxp miahsluyir wqcqfuccrq</div>
   <div>jldgebfxun agdjhfjhei tfoasjafsu jocerirrcx ahnikbpfoi qknkoyfiux lvxaplakdf fvolvmsgms hjkfgkpprn</div>
   <div>rewtwvpuel rjlvstsifb gdylmmoimp jixoihdrtm fxmxwtuuce agdttilhkx</div>
-  <div>rfmwnnacao jbyaactfvy</div>
+  <div>fxrwteiwsb vtxqbreuar galystkdrv pmjrdomvcg utvcyrsigd</div>
 </body>
 </html>
