add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -239,6 +239,6 @@
   <div>manqktxcdi twsnnxpbcg gqmdwwxnyy qtocqyqmxq qqfawyxgyy mivetcsohh</div>
   <div>dtcsmxdlel qjhohxdwgr jvusyccyoi tcklscpchn uhhywecxmg wlmmfmboqx hruenhuacy fxluuuqsrm keevqbbdxu</div>
   <div>kfetxpafwq qkdbbpcegc vxwwuoylxe</div>
-  <div>nehiojuiyt kcwqtrhfmf ymfavrsmgr vrwpnkqtic udiiyndnaf</div>
+  <div>exaaottivy arxrlociye sbqppbnnub ryluohwagp fyyrnujhvl jodlptdgfs ufaqwrfnml qdsulliuva</div>
 </body>
 </html>
