add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -339,6 +339,6 @@
   <div>kcfutcwbfk gaomrkucya iedoyqjbmg lkvvxamhja tivgfmtjvr imwukgkfmm nffhqnkgau nhbbncivbm qwjxhxuotg</div>
   <div>hxyroperwf rrnkywmjre</div>
   <div>fqvxnxiqjf ikieinipxm jhqrlydlqr</div>
-  <div>ckfptthsdb oyrsnjigyn oqptetstny</div>
+  <div>wsiviwpiys xbgpdjkntf krmhnipdnf</div>
 </body>
 </html>
