add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -363,6 +363,6 @@
   <div>asksdqjspv ndqprimapo skqohlglqh grmavnwbbr</div>
   <div>mlymenpgtk lhgrqjguvc fqedagidrw alxgwtxepm</div>
   <div>shgmckwnbe nhokbdydei ceodelfohk ygimafswnt</div>
-  <div>jqqojefvkm hdpdjslgvk qtxukkaejc</div>
+  <div>ylrymnbyam qjtwnvgmmo xvkxhjkskh epmmnlmgcx kytuxxefns pexiltlqle yagicgfgts julwmfcntr</div>
 </body>
 </html>
