add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -318,6 +318,6 @@
   <div>ixghrsvynv mhrxypvctw yidrvqykub dnhigbjose</div>
   <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
   <div>qoyitnebhy isewaoybak dhwcedxaiq qebhtkskfs xvrsucrsjr uevvpqpulb nqcvtscnqg iscrhckeve ceaihcyfsa udatqspvgp</div>
-  <div>uqdprkfdkg eqmojqqnwo</div>
+  <div>figqjwhwyt ujwtoiuwdf unfpecbdbv hhphnkrkui fexgkgouoj rljeqnlhmt</div>
 </body>
 </html>
