add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -512,6 +512,6 @@
   <div>atsrviikpe ehacdldubs lsxrxhwelw khpishioag duscrcdpbb havoscypbe</div>
   <div>aspwnrwmaj</div>
   <div>uhvcaymfyk tplsxljlbt bipnwhbmvi apbaqxlvct kbypgqgvvi</div>
-  <div>jooenhvvbi yjiyalpync uxqdjiqyud</div>
+  <div>dfrintxskd hbdspuhjnj</div>
 </body>
 </html>
