add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -434,6 +434,6 @@
   <div>mtoeycnnnv</div>
   <div>walyxjvjvf yvtltynojb</div>
   <div>bflrftqalk abfupfutxk ywxrdbhign flqswcgrtb</div>
-  <div>gfkyxopmoa aqafnlvdai</div>
+  <div>okdtpvfxfj qolcjyljus wpyjwmwpdx lhnpjyapel</div>
 </body>
 </html>
