add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -409,6 +409,6 @@
   <div>mjsartmtvs lruunypead bvvanugvvf wwephnjfhg xehesmegiw yqqufpttgh gusdrruwqs xiwcmotwcq psitlmtoyk</div>
   <div>iidxpysvpu qhkgxafxsm xmsckgsdkf aecrdcmlpo dyhjylwcpo ibwgdhnfsp wxidigxadk pxvcibkulo</div>
   <div>plwejyhgen cwhxofvlqp ovrsdpfcvw opxwcsdgir piqneywoaw mqrricnemt jhfhsphecq melalbdjui</div>
-  <div>kwqgesykth gdcfwpptno sxnxsumhwr rsktjlsxbj owpkafqcqm ggjipkvufh mircqmxwxq</div>
+  <div>svkhnmdhjx peyeategdw iipuisvdhv nuvfxhhhfd qnlmbjfyfk wresncrijy dwutjawilq cbfwgaihrv pjgdjanxue</div>
 </body>
 </html>
