add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -296,6 +296,6 @@
   <div>fasfqfodwf</div>
   <div>pyuntpeurd yorfbclctm bbjbsliart owqninraxk okmkaiytyi ylikexwska ebamnhrkbj</div>
   <div>bqwmyfuvtp inbkrpxxiv owfyryynon qfigthoshb vsfhkcrwod</div>
-  <div>weuendibda qxaxapuhht hhvwqqlshw xjxhapvuti</div>
+  <div>xobeyswbic vpskqepjgw</div>
 </body>
 </html>
