add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -461,6 +461,6 @@
   <div>dsafyhqoln hroerysbxf</div>
   <div>jonrnfmqqt</div>
   <div>pukvsubuda kpltkstfhu ddnwrspaxm guxcshvfvm</div>
-  <div>lersegpvck eecurycsma vurwljtomq uutwaeokjb avgaimniyd udmivocqyb</div>
+  <div>despdpttog</div>
 </body>
 </html>
