add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -488,6 +488,6 @@
   <div>rxwrtfrtkb</div>
   <div>hqomjmodbn eeovpsuliy emdbfxbfor dftnacusqr</div>
   <div>gixsyjfxmb muliuookyq eakrtmugoo avqtalilxo qdugfdppte vlfjuscpfi moxiqhdddd</div>
-  <div>ymnjgoxpbo</div>
+  <div>nmolkhtutj</div>
 </body>
 </html>
