add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -364,5 +364,6 @@
   <div>mlymenpgtk lhgrqjguvc fqedagidrw alxgwtxepm</div>
   <div>shgmckwnbe nhokbdydei ceodelfohk ygimafswnt</div>
   <div>ylrymnbyam qjtwnvgmmo xvkxhjkskh epmmnlmgcx kytuxxefns pexiltlqle yagicgfgts julwmfcntr</div>
+  <div>egdinndeax ohtfhdqpfn jvetftotor lenaaypfrv povvguurti</div>
 </body>
 </html>
