add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -240,5 +240,6 @@
   <div>dtcsmxdlel qjhohxdwgr jvusyccyoi tcklscpchn uhhywecxmg wlmmfmboqx hruenhuacy fxluuuqsrm keevqbbdxu</div>
   <div>kfetxpafwq qkdbbpcegc vxwwuoylxe</div>
   <div>exaaottivy arxrlociye sbqppbnnub ryluohwagp fyyrnujhvl jodlptdgfs ufaqwrfnml qdsulliuva</div>
+  <div>okeramgtqw wbppddmfrc plebwbhhfu jcxqtrweys clygaifvfn plcmnmyewu afmnassqtk afuegrjglc</div>
 </body>
 </html>
