add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -258,5 +258,6 @@
   <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
   <div>qeeqicbvjy ldqupexrut fxhawqdvhc uybtfsmvla dpdlaukibd cdibxvhsmj</div>
   <div>bptexsanen utvgsxmddx koosoqclos nltjgpvinx vgqmxdxbbp ogarlnaepg vuksnqmbsn ipoqdqpohx cwmveismjg</div>
+  <div>wdqhaelshu iuygrewvey</div>
 </body>
 </html>
