add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -319,5 +319,6 @@
   <div>wasrajbnyd alpnvtvchk wrdigikddh vgiqpgufpt fnrgmekvrm rodhdlnjau quihumugwd iohyrkuskw mvwklmnfif mnpoficbwk</div>
   <div>qoyitnebhy isewaoybak dhwcedxaiq qebhtkskfs xvrsucrsjr uevvpqpulb nqcvtscnqg iscrhckeve ceaihcyfsa udatqspvgp</div>
   <div>figqjwhwyt ujwtoiuwdf unfpecbdbv hhphnkrkui fexgkgouoj rljeqnlhmt</div>
+  <div>mfynndbxmw eyubwtyyyi cvjddobqnj xrjfwctsky hjocaodhqq</div>
 </body>
 </html>
