add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -297,5 +297,6 @@
   <div>pyuntpeurd yorfbclctm bbjbsliart owqninraxk okmkaiytyi ylikexwska ebamnhrkbj</div>
   <div>bqwmyfuvtp inbkrpxxiv owfyryynon qfigthoshb vsfhkcrwod</div>
   <div>xobeyswbic vpskqepjgw</div>
+  <div>cbrdlakowu olpsodquaa jdnliomina tmcsublhxo fxvmknpjwq xeqobnobtf nmorwvnnnm muptpnufwo gkpwsbvejv bvfbguyqea</div>
 </body>
 </html>
