add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -462,5 +462,6 @@
   <div>jonrnfmqqt</div>
   <div>pukvsubuda kpltkstfhu ddnwrspaxm guxcshvfvm</div>
   <div>despdpttog</div>
+  <div>lxdrujtnid wfnpihifwq wpxxevcmvg aoifuqosdm oedqhcbiso xsgyojodew irwsbqwiqd cmcrkukahh ideuknjcuu</div>
 </body>
 </html>
