add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -340,5 +340,6 @@
   <div>hxyroperwf rrnkywmjre</div>
   <div>fqvxnxiqjf ikieinipxm jhqrlydlqr</div>
   <div>wsiviwpiys xbgpdjkntf krmhnipdnf</div>
+  <div>nbalmiuaki measxdeujr</div>
 </body>
 </html>
