add code in files types: .html,.js remove code in files types:

--- a/content.html
+++ b/content.html
@@ -513,5 +513,6 @@
   <div>aspwnrwmaj</div>
   <div>uhvcaymfyk tplsxljlbt bipnwhbmvi apbaqxlvct kbypgqgvvi</div>
   <div>dfrintxskd hbdspuhjnj</div>
+  <div>gyrrpqcalm summovhbmv xehgxjmgpr lxopbounoj drynhccvnn otanfcmooh</div>
 </body>
 </html>
