add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -435,6 +435,6 @@
   <div>walyxjvjvf yvtltynojb</div>
   <div>bflrftqalk abfupfutxk ywxrdbhign flqswcgrtb</div>
   <div>okdtpvfxfj qolcjyljus wpyjwmwpdx lhnpjyapel</div>
-  <div>llbrqeyaih mrhcsiodgs wymqeuslbj qkmhhwqyja cmgmquwmod adtuedpiys ytmahkkjcu</div>
+  <div>wwrquiokvs kqjwxvvbtt cjbqppxvou pnfhxahqnc xpklbdtqwx bylajldbkd gyftdldisc</div>
 </body>
 </html>
