add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -489,6 +489,6 @@
   <div>hqomjmodbn eeovpsuliy emdbfxbfor dftnacusqr</div>
   <div>gixsyjfxmb muliuookyq eakrtmugoo avqtalilxo qdugfdppte vlfjuscpfi moxiqhdddd</div>
   <div>nmolkhtutj</div>
-  <div>ljlfqqurhu airlyjgghs dsvqrugtpo onddmwsuid ijvtsodngc hmgnbirksb yfscmcysmp jtjgrbebuw</div>
+  <div>himpjhpmhn owvhjctjph umrektghir</div>
 </body>
 </html>
