add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -513,6 +513,6 @@
   <div>aspwnrwmaj</div>
   <div>uhvcaymfyk tplsxljlbt bipnwhbmvi apbaqxlvct kbypgqgvvi</div>
   <div>dfrintxskd hbdspuhjnj</div>
-  <div>gfpxogehtb qypogaimte hsdtwcehus eiaukjqvdr npkayiqudo hhjhpwghxu ercfpiylbc hvkokdfgfd fdviocddey fqdsycawqr</div>
+  <div>cxkvlmdvny vymhiltori ycxmdgqmjv stvweyfujy tpirsjdlkn jropydpviw</div>
 </body>
 </html>
