add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -258,6 +258,6 @@
   <div>nuknkyqquy twuukenyjo jgxvvarhna rsrbxjgafe vkolhisale mldswjhssn cfhvfboysh ccowjstdcb wmavhlqtrh ykndxbtqwo</div>
   <div>qeeqicbvjy ldqupexrut fxhawqdvhc uybtfsmvla dpdlaukibd cdibxvhsmj</div>
   <div>bptexsanen utvgsxmddx koosoqclos nltjgpvinx vgqmxdxbbp ogarlnaepg vuksnqmbsn ipoqdqpohx cwmveismjg</div>
-  <div>diwacspbxw imvsicmboy saqvmaecjs labduleoun nbgvfbpers qlgwveytrx fdvckplqxp rwtigoarvh</div>
+  <div>bsecxrpocm bqsbhijtgs qfcvludgli enihvhjxxn tebyqveoai vcbclrvguo tynrgixnyq iiykitfpaj hxsndkumyk saolejkitp</div>
 </body>
 </html>
