add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -222,6 +222,6 @@
   <div>jldgebfxun agdjhfjhei tfoasjafsu jocerirrcx ahnikbpfoi qknkoyfiux lvxaplakdf fvolvmsgms hjkfgkpprn</div>
   <div>rewtwvpuel rjlvstsifb gdylmmoimp jixoihdrtm fxmxwtuuce agdttilhkx</div>
   <div>fxrwteiwsb vtxqbreuar galystkdrv pmjrdomvcg utvcyrsigd</div>
-  <div>ysceymcfhv ribmlalcrj uagqvbsjfx flavdauqlf yddirvfjkw btlvopigpf dumutepfqk ifgrbqvhli ouojqxdfrg</div>
+  <div>oeqkxjisdx kxsbrwrekw xbejgmbjbh gtxgevvote</div>
 </body>
 </html>
